css/groove_writer_orange.css
/* ... */
	#divisionButtonContainer {
		
	}
	#metronomeContainer {
	}
	#metronomeLabel {
		display: inline-block;
		height: 20px;
		font-weight: 500;
		margin: 0px 5px 0px 10px;
		text-align: center;
		color: #EEF;
	}
	.metronomeButton, .rightButtons {
		padding: 2px;
		cursor: pointer;
		display: inline-block;
		/background: #0071ad;
		color: #FFF;
		border: 0px solid #00B;
		text-align: center;
		border-radius: 20px;
		/width: 50px;
		margin: 0px 1px;
		height: 20px;
		transition: all .1s ease-in-out;
	}
	.rightButtons {
		margin: 0px 6px;
	}
	.metronomeButton:hover, .rightButtons:hover, .metronomeButton.selected:hover, .rightButtons.selected:hover, .rightButtons.buttonSelected:hover {
		/color: #3b5166;
		font-weight: 700;
		transform: scale(1.05);
	}
	.metronomeButton.options {
		width: 75px;
	}
	.metronomeButton.buttonSelected, .metronomeButton.selected, .rightButtons.buttonSelected {  /* is a button and is selected */
		color: #444444;
		font-weight: 700;
		/background: #68c2ff;
	}
	#midiPlayer {  /* more #midiPlayer css in groove_display.css */
		background: #000;
		width: calc(100% - 72px);
		height: 48px;
		position: fixed;
		top: 49px;
		/position: relative;
		left: 72px;
		z-index: 999;
		border-bottom: 1px solid #000;
	}
	#logoInSubdivision {
		display: block;
		height: 48px;
		border-bottom: 1px solid #000;
		display: -webkit-flex;
		display: flex;
		align-items: center;
		-webkit-align-items: center;
		justify-content: center;
		-webkit-justify-content: center;
	}
	#logoInSubdivision img {
		height: 40px;
	}
	.left-button {
		display: block;
		cursor: pointer;
		font-size: 12px;
		font-weight: bold;
		height: 48px;
		border-bottom: 1px solid #000;
		text-align: center;
		vertical-align: middle;
		color: #999999;
		display: -webkit-flex;
		display: flex;
		align-items: center;
		-webkit-align-items: center;
		justify-content: center;
		-webkit-justify-content: center;
		transition: all .1s ease-in-out;
	}
	#timeLabel {
		height: 48px;  /* Override from above */
	}
	#timeSigLabel {
		color: #E69D02;
		font-size: 20px;
		margin-bottom: -5px;
	}
	#timeSubLabel {
		color: #E69D02;
		font-size: 12px;
	}
	.left-button.disabled, .left-button.disabled:hover {
		color: #000;
		background-color: #393939;
	}
	.left-button.buttonSelected, .left-button.buttonSelected:hover {  /* is subdivision and is selected */
		background: #2484C0;
		color: #FFF;
		cursor: auto;
		transform: scale(1.1);
	}	
	.myButton:hover, .left-button:hover {
	   border-top-color: #28597a;
	   background: #555555;
	   color: #ccc;
	   transform: scale(1.05);
	 }
	.myButton:active, .left-button:active  {
	   border-top-color: #1b435e;
	   background: #1b435e;
    }
	.buttonFraction {  /* The number above "triplet" in the .subdivision 1/4, 1/8, etc */
		display: block;
		font-size: 18px;
	}
	#advancedEditAnchor.buttonSelected {
		background: #009ffa;
		color: #FFF;
		font-size: 14px;
	}
	.buttonText {
	}
	#undoButton {
		font-size: 14px;
	}
	#NotationLine {
		height: 35px;
		text-align: center;
		padding-top: 13px;
		border-bottom:1px solid #AAA;
		background-color: #DDD;
	
	}
	#NotationLabel {
		display: inline-block;
		margin:auto;
		font-size: 20px;
		font-weight: bold;
		text-align: center;
		padding-left: 62px;
	}
	#KeyButton {
		float: right;
		padding-right: 5px;
		font-size: 18px;
		text-align: right;
	}
	#hiddenDescription {
		display: none;
	}
	#musicalInput {
		display: block;
		width: 100%;
		background: #FFF;
		overflow-x: auto;
		overflow-y: hidden;
		border-bottom: 1px solid #AAA;
		white-space: nowrap;
		text-align: center;
	}
	@media only screen and (orientation: portrait) {
		#musicalInput {
			white-space: normal;
			/* wrap down on portait mode displays,
			 *	don't wrap in landscape mode
			 */
		}
	}
	#musicalInput.expanded {
		max-width: 5000px !important;
	}
	#measureContainer {
		margin-left: auto;
		margin-right: auto;
	}
	.staff-container {
		/margin-left: 2px;
		/margin-top: 2px;
		margin-right: -3px;
		margin-bottom: 0px;
		display: inline-block;
		background: #FFFFFF;
		white-space: nowrap;
	}
	.notes-row-container {
		display: inline-block;
	}
	.heading1 {
		font-size: 30px;
		font-weight: bold;
	}
	.line-labels {
		display: inline-block;
		vertical-align: top;
		width: 80px;
		font-size: 20px;
		display: table-cell;
	}
	.stickings-label {
		display: none;
		height: 25px;
		background: #f7f1cf;
		color: #2484C0;
		padding-top: 9px;
		padding-left: 1px;
		font-size: 12px;
		cursor: pointer;
		text-align: center;
	}
	.hh-label {
		display: block;
		white-space:nowrap;
		margin-top: 16px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
	}
	#tom1-label {
		display: block;
		white-space:nowrap;
		margin-top: 5px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
		visibility: hidden;
	}
	.snare-label {
		margin-top: 5px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
	}
	#tom4-label {
		display: block;
		white-space:nowrap;
		margin-top: 5px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
		visibility: hidden;
	}
	.kick-label {
		margin-top: 5px;
		margin-left: 8px;
		cursor: pointer;
		text-align: center;
	}
	.stickings-label:hover {
		color: #000;
	}
	.hh-label:hover, .snare-label:hover, .kick-label:hover {
		color: #2484C0;
	}
	.music-line-container {
		display: inline-block; 
		/top: 30px; 
		z-index: 3;
		display: table-cell;
	}
	.notes-container {
		font-family:  Times New Roman;  /* parens around snare ghost note, R for Ride */
		position: relative; 
		z-index: 4;
	}
	.stickings-container {
		display: none;
		height: 32px;
		background: #f7f1cf;
		border: 1px solid transparent;
		margin-top: 0px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.background-highlight-container {
		position: absolute; 
		height: 190px;
		white-space:nowrap;
		border: 1px solid transparent;
	}
/* ... */

